--- a/main.tex
+++ b/main.tex
@@ -181,7 +181,7 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 We began our discussion of manifolds by assigning real number values to individual points on a more abstract space. This related to the determination of physical cases, given some set of possibilities, and we were able to define coordinate systems. We will now be extending that process to arbitrary submanifolds, such that we will be able to assign real numbers to lines, areas, bodies, etc., corresponding to some physical property of that object. This may sound much more abstract than it actually is. In reality, all that we are doing here is quantifying and mathematically formalizing scientific investigation with as few tools as possible. 
 
 
- The greater importance of what we are doing here lies in the fact that we are developing our mathematical structure for physical investigation while imposing as few assumptions as possible. We want our tools to work as generally as possible, being just as valid for working in phase space, or on a map of the earth. For example, consider a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and (in general) resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. 
+ The greater importance of what we are doing here lies in the fact that we are developing our mathematical structure for physical investigation while imposing as few assumptions as possible. We want our tools to work in general, being just as valid for working in phase space, or on a map of the earth. Consider now a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. 
 
 Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $A, B,$ and $C$, such that $A \in \lambda$ is the starting point of the path, $C \in \lambda$ is the ending point of the path, and $B$ is some point between them. We can say, therefore, that \begin{gather} W(\lambda_{A\to C}) = W(\lambda_{A \to B}) + W(\lambda_{B \to C}).\end{gather} [\textbf{Insert a tikz picture here}]
 That is, we can say that the work done over the entire path is equal to the work done over one portion of the path plus the work done over the rest of the path. It follows, therefore, that we can break up the path into as many finite paths as we want, determine the work on each of them, and sum them to get the overall work. In other words, \begin{gather} W(\lambda) = \sum_{i=1}^{n} W(\lambda_i) \end{gather} for a line split into $n$ pieces (not necessarily equally large). We require, however, that the ends are stuck exactly end-to-end (that is, the components overlap on their boundaries). The function $W$ is therefore linear. We call such a function a 1-functional, or a linear functional over 1-surfaces. 
@@ -215,9 +215,14 @@ If we have a 1-functional $f$, each individual $f(\lambda_i)$, as well as $f(\la
 
 \textbf{Flux gives it a specific flavor to begin with. The language is demonstrative, saying things matter and don't matter, but it isn't clear what the argument is. It isn't clear whether it's a demonstration or a construction. In general there's a mix of physical things and math things in the same argument. }
 \textbf{Talking about flux is confusing. Specify that all that matters if the flow leaving the object [if we want to maintain the example], rather than the flow "through" the object}
-Consider now a flux functional $\Phi \in f_2$, and a 3-surface $v \in S^3$ representing the Earth. Strictly speaking, we cannot measure the flux through the Earth as it stands right now, as the Earth is a 3-surface, and the flux a 2-functional. However, if we're only concerning ourselves with the flow out of the Earth, the behavior of the functional within the Earth doesn't make one bit of difference. All that matters is the surface of the Earth: $\partial\epsilon$. Similarly, suppose we have a work functional $W \in f_1$ and a 2-surface. As it stands, we cannot determine the work \emph{through} this surface, but we can determine work on a path \emph{on} this surface, which, if closed, would be the boundary of some 2-surface $\sigma$ on the original 2-surface. By systematically ignoring parts of a surface that are in effect irrelevant (that is, ignoring everything besides the boundary), we may apply a lower rank functional to that surface. In complement to the boundary operator $\partial$, we call the \textbf{boundary functional}, denoted by $\eth$, the tool by which we apply k-functionals to surfaces of higher rank.
+Consider now a flux functional $\Phi \in f_2$, and a 3-surface $\tau \in S^3$ representing the Earth. Strictly speaking, we cannot measure the flux through the Earth as it stands right now, as the Earth is a 3-surface, and the flux a 2-functional. However, if we're only concerning ourselves with the flow out of the Earth, the behavior of the functional within the Earth doesn't make one bit of difference. All that matters is the surface of the Earth: $\partial \tau$. Similarly, suppose we have a work functional $W \in f_1$ and a 2-surface. As it stands, we cannot determine the work \emph{through} this surface, but we can determine work on a path \emph{on} this surface, which, if closed, would be the boundary of some 2-surface $\sigma$ on the original 2-surface. By systematically ignoring parts of a surface that are in effect irrelevant (that is, ignoring everything besides the boundary), we may apply a lower rank functional to that surface. In complement to the boundary operator $\partial$, we call the \textbf{boundary functional}, denoted by $\eth$, the tool by which we apply k-functionals to surfaces of higher rank.
 
+Let's examine now how the boundary functional works in practice by returning to the work functional. We will be once again considering $W \in F_1$ and $\lambda \in S^1$, and assuming that there is some force defined, from which we may determine $W(\lambda)$, without any further assumptions as to the nature of the work or the surface. So, we will have work done by both conservative forces like gravity, and nonconservative forces like drag. In general, we will have that $W(\lambda)$ will take on some real number value. If we change $\lambda$ in any way, such as where it begins or ends, or the path it takes between its beginning and end, it will change the number we get when we pass it to $W$. 
 
+Let us now impose the condition that $\lambda$ is closed, meaning that $\partial\lambda = 0$, while continuing to consider the work done by both drag and some conservative force. Effectively, this means that its beginning and ending points are the same. We will in general have that $W(\lambda)$ takes on some value which depends on the path taken between the beginning and ending points of $\lambda$. [\textbf{$W(\partial\lambda)$ doesn't work}] However, $W(\partial\lambda) = W(\emptyset) = 0$, meaning that if we are measuring work only on the boundary of the line, in this case, we would find that no work had been done.
+
+\textbf{Don't need to necessary impose that there is no drag, only that we are neglecting its work. Also, could have this up above the definition of boundary functional}
+Let us impose now one further condition: we will only allow conservative forces such as gravitational force to act on the particle. Therefore, there's no drag, friction, etc. Physically, this means that the work done by the force on the particle will be path independent. In other words, if we have a closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0, \end{gather} for any closed line $\lambda$. $W$, therefore, is an exact functional. Because $\lambda$ is closed, the boundary $\partial\lambda$ is empty. We have, therefore, that \begin{gather} W(\lambda) = U(\partial\lambda) = U(\emptyset) = 0, \end{gather} defining $U : S^0 \to \mathbb{R}$ such that \begin{gather}W(\lambda) = U(\partial\lambda).\end{gather} 
 
 \begin{defn}
 	$\eth : F_k \to F_{k+1}$ such that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$ is the \textbf{boundary functional} on k-functionals. 
@@ -244,13 +249,7 @@ Because $f(\emptyset) = 0$, we have that $h(\sigma) = 0$ for any $\sigma$. This 
 	An \textbf{exact functional} is a k-functional $f_k \in F_k$ such that, if $\partial\sigma^k = \emptyset$ for $\sigma^k \in S^k$, then $f_k(\sigma^k) = 0$. 
 \end{defn}
 
-Let's examine now how all this works in practice by returning to the work functional. We will be once again considering $W \in F_1$ and $\lambda \in S^1$, and assuming that there is some force defined, from which we may determine $W(\lambda)$, without any further assumptions as to the nature of the work or the surface. In general, we will have that $W(\lambda)$ will take on some real number value. If we change $\lambda$ in any way, such as where it begins or ends, or the path it takes between its beginning and end, it will change the number we get when we pass it to $W$. 
 
-\textbf{If I want to have this argument in here, need to specify that we have drag in here}
-Let us now impose the condition that $\lambda$ is closed, meaning that $\partial\lambda = 0$. Effectively, this means that its beginning and ending points are the same. In general (emphasizing once again that we have made no further assumptions as to the nature of the forces at play), we will have that $W(\lambda)$ takes on some value which depends on the path taken between the beginning and ending points of $\lambda$. [\textbf{$W(\partial\lambda)$ doesn't work}] In general, however, $W(\partial\lambda) = W(\emptyset) = 0$, meaning that if we are measuring work only on the boundary of the line, in this case, we would find that no work had been done.
-
-\textbf{Don't need to necessary impose that there is no drag, only that we are neglecting its work. Also, could have this up above the definition of boundary functional}
-Let us impose now one further condition: we will only allow conservative forces such as gravitational force to act on the particle. Therefore, there's no drag, friction, etc. Physically, this means that the work done by the force on the particle will be path independent. In other words, if we have a closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0, \end{gather} for any closed line $\lambda$. $W$, therefore, is an exact functional. Because $\lambda$ is closed, the boundary $\partial\lambda$ is empty. We have, therefore, that \begin{gather} W(\lambda) = U(\partial\lambda) = U(\emptyset) = 0, \end{gather} defining $U : S^0 \to \mathbb{R}$ such that \begin{gather}W(\lambda) = U(\partial\lambda).\end{gather} 
 
 
 \textbf{Conclusion should be to note that the closed functionals are the boundary functionals of some other functional. And that the boundary functional of an exact functional is zero.}
