Better explanation into the boundary functional

--- a/main.tex
+++ b/main.tex
@@ -178,7 +178,7 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 
 
 
-We began our discussion of manifolds by assigning real number values to individual points on a more abstract space. This related to the determination of physical cases, given some set of possibilities, and we were able to define coordinate systems. We will now be extending that process to arbitrary submanifolds, such that we will be able to assign real numbers to lines, areas, bodies, etc., corresponding to some physical property of that object. This may sound much more abstract than it actually is. In reality, all that we are doing here is quantifying and mathematically formalizing scientific investigation with as few tools as possible. 
+We began our discussion of manifolds by assigning real number values to individual points on a more abstract space. This related to the determination of physical cases, given some set of possibilities, and we were able to define coordinate systems. We will now be extending that process to arbitrary submanifolds, such that we will be able to assign real numbers to lines, areas, volumes, etc., corresponding to some physical property of that object. This may sound much more abstract than it actually is. In reality, all that we are doing here is quantifying and mathematically formalizing scientific investigation with as few tools as possible. 
 
 
  The greater importance of what we are doing here lies in the fact that we are developing our mathematical structure for physical investigation while imposing as few assumptions as possible. We want our tools to work in general, being just as valid for working in phase space, or on a map of the earth. Consider now a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. 
@@ -213,23 +213,28 @@ If we have a 1-functional $f$, each individual $f(\lambda_i)$, as well as $f(\la
 
 
 
-\textbf{Flux gives it a specific flavor to begin with. The language is demonstrative, saying things matter and don't matter, but it isn't clear what the argument is. It isn't clear whether it's a demonstration or a construction. In general there's a mix of physical things and math things in the same argument. }
-\textbf{Talking about flux is confusing. Specify that all that matters if the flow leaving the object [if we want to maintain the example], rather than the flow "through" the object}
-Consider now a flux functional $\Phi \in f_2$, and a 3-surface $\tau \in S^3$ representing the Earth. Strictly speaking, we cannot measure the flux through the Earth as it stands right now, as the Earth is a 3-surface, and the flux a 2-functional. However, if we're only concerning ourselves with the flow out of the Earth, the behavior of the functional within the Earth doesn't make one bit of difference. All that matters is the surface of the Earth: $\partial \tau$. Similarly, suppose we have a work functional $W \in f_1$ and a 2-surface. As it stands, we cannot determine the work \emph{through} this surface, but we can determine work on a path \emph{on} this surface, which, if closed, would be the boundary of some 2-surface $\sigma$ on the original 2-surface. By systematically ignoring parts of a surface that are in effect irrelevant (that is, ignoring everything besides the boundary), we may apply a lower rank functional to that surface. In complement to the boundary operator $\partial$, we call the \textbf{boundary functional}, denoted by $\eth$, the tool by which we apply k-functionals to surfaces of higher rank.
+
+Let $\tau \in S^3$ be the Earth, and let $\Phi \in F_2$ be a functional that returns the flow out of some surface. If we wish to describe the flow out of the Earth, we would only have to concern ourselves with the flow through the surface of the Earth, given by $\partial\tau$, as the flow within the Earth doesn't make one bit of difference. We therefore can say that the flow out of the Earth is given by $\Phi(\partial\tau)$. Similarly, suppose we have a work functional $W \in f_1$ and a disk $\sigma \in S^2$. We can merely concern ourselves with the work done around the edge of the disk; that is, $W(\partial\sigma)$. What these two examples have in common is that we recognize that if we have a k-surface defined, we have also implicitly defined a (k-1)-surface as well, to which we can apply (k-1)-functionals. These constructions are formed, however, based on an argument on the surface using the boundary functional $\partial$. We want to be able to accomplish the same thing through an argument on the functional. By systematically ignoring parts of a surface that are in effect irrelevant (that is, ignoring everything besides the boundary), we may apply a lower rank functional to that surface. In complement to the boundary operator $\partial$, we call the \textbf{boundary functional}, denoted by $\eth$, the tool by which we apply k-functionals to surfaces of higher rank.
 
 Let's examine now how the boundary functional works in practice by returning to the work functional. We will be once again considering $W \in F_1$ and $\lambda \in S^1$, and assuming that there is some force defined, from which we may determine $W(\lambda)$, without any further assumptions as to the nature of the work or the surface. So, we will have work done by both conservative forces like gravity, and nonconservative forces like drag. In general, we will have that $W(\lambda)$ will take on some real number value. If we change $\lambda$ in any way, such as where it begins or ends, or the path it takes between its beginning and end, it will change the number we get when we pass it to $W$. 
 
-Let us now impose the condition that $\lambda$ is closed, meaning that $\partial\lambda = 0$, while continuing to consider the work done by both drag and some conservative force. Effectively, this means that its beginning and ending points are the same. We will in general have that $W(\lambda)$ takes on some value which depends on the path taken between the beginning and ending points of $\lambda$. [\textbf{$W(\partial\lambda)$ doesn't work}] However, $W(\partial\lambda) = W(\emptyset) = 0$, meaning that if we are measuring work only on the boundary of the line, in this case, we would find that no work had been done.
+As is tradition in classical physics, we will now neglect drag, and only consider the work done on the particle by conservative forces. The implication of this is that the work done by the force on the particle will be path independent. In other words, if we have any closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0. \end{gather} We call functions such as $W$ \textbf{exact functionals}. 
 
-\textbf{Don't need to necessary impose that there is no drag, only that we are neglecting its work. Also, could have this up above the definition of boundary functional}
-Let us impose now one further condition: we will only allow conservative forces such as gravitational force to act on the particle. Therefore, there's no drag, friction, etc. Physically, this means that the work done by the force on the particle will be path independent. In other words, if we have a closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0, \end{gather} for any closed line $\lambda$. $W$, therefore, is an exact functional. Because $\lambda$ is closed, the boundary $\partial\lambda$ is empty. We have, therefore, that \begin{gather} W(\lambda) = U(\partial\lambda) = U(\emptyset) = 0, \end{gather} defining $U : S^0 \to \mathbb{R}$ such that \begin{gather}W(\lambda) = U(\partial\lambda).\end{gather} 
+\begin{defn}
+	An \textbf{exact functional} is a k-functional $f_k \in F_k$ such that, if $\partial\sigma^k = \emptyset$ for $\sigma^k \in S^k$, then $f_k(\sigma^k) = 0$. 
+\end{defn}
+
+
+Because $\lambda$ is closed, the boundary $\partial\lambda$ is empty. Therefore, we have that, for some function $U : S^0 \to \mathbb{R}$, such that \begin{gather}W(\lambda) = U(\partial\lambda),\end{gather} that \begin{gather} W(\lambda) = U(\partial\lambda) = U(\emptyset) = 0. \end{gather}
+
+This relationship between $W$ and $U$ may be stated in another way using the boundary functional. If (1.23) holds, we can say alternatively that \begin{gather}W(\lambda) = \eth U(\lambda). \end{gather}
 
 \begin{defn}
 	$\eth : F_k \to F_{k+1}$ such that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$ is the \textbf{boundary functional} on k-functionals. 
 \end{defn}
 
-\textbf{Don't say "care must be taken". Since it's just a property, it's not something to be worried about, I guess}
-While the boundary functional can in a sense be arbitrarily applied to functionals, care must be taken. For instance, suppose we have $f \in F_k$ and $g \in F_{k+1}$, such that $g = \eth f$. For (k+1)-surface $\sigma \in S^{k+1}$, we have that \begin{gather} g(\sigma) = \eth f(\sigma) = f(\partial\sigma). \end{gather} So far so good. But now introduce $h \in F_{k+2}$, such that $h = \eth g$, and let $\sigma$ now be a (k+2)-surface. We have then that \begin{gather} h(\sigma) = g(\partial\sigma) = \eth g(\sigma) = \eth\eth f(\sigma) = f(\partial\partial\sigma). \end{gather} Recall that $\partial\partial\sigma = \emptyset$ for any $\sigma$, so we have that \begin{gather}f(\partial\partial\sigma) = f(\emptyset). \end{gather}
+
+Equation (1.24) suggests an interesting property of k-functionals that must be explored and formalized. Suppose we have $f \in F_k$ and $g \in F_{k+1}$, such that $g = \eth f$. For (k+1)-surface $\sigma \in S^{k+1}$, we have that \begin{gather} g(\sigma) = \eth f(\sigma) = f(\partial\sigma). \end{gather} So far so good. But now introduce $h \in F_{k+2}$, such that $h = \eth g$, and let $\sigma$ now be a (k+2)-surface. We have then that \begin{gather} h(\sigma) = g(\partial\sigma) = \eth g(\sigma) = \eth\eth f(\sigma) = f(\partial\partial\sigma). \end{gather} Recall that $\partial\partial\sigma = \emptyset$ for any $\sigma$, so we have that \begin{gather}f(\partial\partial\sigma) = f(\emptyset). \end{gather}
 
 $f(\emptyset)$ must be zero, as \begin{gather} f(\emptyset) = f(\emptyset\cup\emptyset) = f(\emptyset) + f(\emptyset) = 2f(\emptyset),\end{gather} so \begin{gather} f(\emptyset) = 2f(\emptyset), \end{gather} so $f(\emptyset) = 0$ for any $f$. 
 
@@ -237,17 +242,11 @@ $f(\emptyset)$ must be zero, as \begin{gather} f(\emptyset) = f(\emptyset\cup\em
 	A k-functional applied to the empty set gives zero. 
 \end{prop}
 
-Because $f(\emptyset) = 0$, we have that $h(\sigma) = 0$ for any $\sigma$. This results  directly from the fact that $h = \eth\eth f$. 
+Because $f(\emptyset) = 0$, we have that, since $h(\sigma) = \eth\eth f(\sigma)$, that $h(\sigma) = 0$ for any $\sigma$, making it the \textbf{zero functional}.
 
 \begin{prop}
 	For any k-functional $f$, $\eth\eth f$ will be the zero functional. 
 \end{prop}
-
-[\textbf{Explain and lead into this}] Suppose now we have a closed surface $\sigma \in S^k$, meaning that $\partial\sigma = \emptyset$. If we have that, for $f\in F_k$, $f(\sigma) = 0$ for \emph{any} closed surface $\sigma$, then we call $f$ an \textbf{exact functional}. 
-
-\begin{defn}
-	An \textbf{exact functional} is a k-functional $f_k \in F_k$ such that, if $\partial\sigma^k = \emptyset$ for $\sigma^k \in S^k$, then $f_k(\sigma^k) = 0$. 
-\end{defn}
 
 
 
