Notes from meeting

--- a/main.tex
+++ b/main.tex
@@ -213,10 +213,13 @@ If we have a 1-functional $f$, each individual $f(\lambda_i)$, as well as $f(\la
 
 
 
+\textbf{Either give the physical example, which would be fine. Or give the mathematical example, which would be fine. Otherwise what we have here is a mixture of the two, even in the same sentence. This must be true in general}
+Let $\tau \in S^3$ be the Earth, and let $\Phi \in F_2$ be a functional that returns the flow out of some surface. If we wish to describe the flow out of the Earth, we would only have to concern ourselves with the flow through the surface of the Earth, given by $\partial\tau$ [\textbf{this makes it sound like $\partial\tau$ is the flow, not just the surface}], as the flow within the Earth doesn't make one bit of difference. We therefore can say that the flow out of the Earth is given by $\Phi(\partial\tau)$. Similarly, suppose we have a work functional $W \in f_1$ and a disk $\sigma \in S^2$. [\textbf{Work done on a particle constrained to the edge of the disk. Still doesn't work well, maybe. }]We can merely concern ourselves with the work done around the edge of the disk; that is, $W(\partial\sigma)$. What these two examples have in common is that we recognize that if we have a k-surface defined, we have also implicitly defined a (k-1)-surface as well, to which we can apply (k-1)-functionals. These constructions are formed, however, based on an argument on the surface using the boundary functional $\partial$. We want to be able to accomplish the same thing through an argument on the functional. By systematically ignoring parts of a surface that are in effect irrelevant (that is, ignoring everything besides the boundary), we may apply a lower rank functional to that surface. In complement to the boundary operator $\partial$, we call the \textbf{boundary functional}, denoted by $\eth$, the tool by which we apply k-functionals to surfaces of higher rank. [\textbf{To justify these concepts a priori, we may have to argue for the boundary functional from the complete other direciton. We would have to directly show that something that is exact is the boundary of something else. If we remove the disk example, the other flow argument does sort of make sense. Use an example of compression/expansion of a surface around a fluid as an example. This feeds in well to the gradient, as incompressibility means divergence is zero}]
 
-Let $\tau \in S^3$ be the Earth, and let $\Phi \in F_2$ be a functional that returns the flow out of some surface. If we wish to describe the flow out of the Earth, we would only have to concern ourselves with the flow through the surface of the Earth, given by $\partial\tau$, as the flow within the Earth doesn't make one bit of difference. We therefore can say that the flow out of the Earth is given by $\Phi(\partial\tau)$. Similarly, suppose we have a work functional $W \in f_1$ and a disk $\sigma \in S^2$. We can merely concern ourselves with the work done around the edge of the disk; that is, $W(\partial\sigma)$. What these two examples have in common is that we recognize that if we have a k-surface defined, we have also implicitly defined a (k-1)-surface as well, to which we can apply (k-1)-functionals. These constructions are formed, however, based on an argument on the surface using the boundary functional $\partial$. We want to be able to accomplish the same thing through an argument on the functional. By systematically ignoring parts of a surface that are in effect irrelevant (that is, ignoring everything besides the boundary), we may apply a lower rank functional to that surface. In complement to the boundary operator $\partial$, we call the \textbf{boundary functional}, denoted by $\eth$, the tool by which we apply k-functionals to surfaces of higher rank.
+\textbf{Put the boundary functional definition here}
 
 Let's examine now how the boundary functional works in practice by returning to the work functional. We will be once again considering $W \in F_1$ and $\lambda \in S^1$, and assuming that there is some force defined, from which we may determine $W(\lambda)$, without any further assumptions as to the nature of the work or the surface. So, we will have work done by both conservative forces like gravity, and nonconservative forces like drag. In general, we will have that $W(\lambda)$ will take on some real number value. If we change $\lambda$ in any way, such as where it begins or ends, or the path it takes between its beginning and end, it will change the number we get when we pass it to $W$. 
+\textbf{Sort of convoluted. Just say that we have the work on a line. Note that a force is conservative if it's zero on a closed path. Introduce exactness and the boundary functional separately, otherwise the use of the boundary functional is spread too far apart from the beginning of the argument}
 
 As is tradition in classical physics, we will now neglect drag, and only consider the work done on the particle by conservative forces. The implication of this is that the work done by the force on the particle will be path independent. In other words, if we have any closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0. \end{gather} We call functions such as $W$ \textbf{exact functionals}. 
 
@@ -224,7 +227,7 @@ As is tradition in classical physics, we will now neglect drag, and only conside
 	An \textbf{exact functional} is a k-functional $f_k \in F_k$ such that, if $\partial\sigma^k = \emptyset$ for $\sigma^k \in S^k$, then $f_k(\sigma^k) = 0$. 
 \end{defn}
 
-
+\textbf{What am I saying here? Write bullet points for each paragraph.}
 Because $\lambda$ is closed, the boundary $\partial\lambda$ is empty. Therefore, we have that, for some function $U : S^0 \to \mathbb{R}$, such that \begin{gather}W(\lambda) = U(\partial\lambda),\end{gather} that \begin{gather} W(\lambda) = U(\partial\lambda) = U(\emptyset) = 0. \end{gather}
 
 This relationship between $W$ and $U$ may be stated in another way using the boundary functional. If (1.23) holds, we can say alternatively that \begin{gather}W(\lambda) = \eth U(\lambda). \end{gather}
